# clirdle

./: Cargo.toml  README.md
src/: 5_letter_words.rs  five_letter_words.rs  main.rs
